fix(数据大屏): 修复全屏预览存在数据集下拉框问题

--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -561,7 +561,7 @@ strong {
 // 这里使用的方案为直接将body全屏 区间组件覆盖整个body
 .de-screen-full {
   position: fixed !important;
-  z-index: 200;
+  z-index: 1001 !important;
   top: 0;
   left: 0;
   right: 0;
