--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -671,3 +671,9 @@ strong {
 .hidden-tooltip {
   display: none !important;
 }
+
+.de-collapse-style {
+  .ed-form-item__label {
+    margin-bottom: 8px !important;
+  }
+}
