refactor: 优化发布问题

--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -430,11 +430,11 @@ em {
 }
 
 .color-screen {
-  background: rgb(0, 214, 185);
+  background: rgba(51, 112, 255, 1);
 }
 
 .color-dataV {
-  background: rgb(0, 214, 185) !important;
+  background: rgba(51, 112, 255, 1);
 }
 
 .color-dataset {
