--- a/core/core-frontend/src/style/mixin.less
+++ b/core/core-frontend/src/style/mixin.less
@@ -4,7 +4,7 @@
     :deep(.ed-tabs__header::after)  {
       content: '';
       position: absolute;
-      bottom: 0;
+      bottom: -1px;
       width: @width;
       height: 1px;
       background-color: rgba(31, 35, 41, 0.15);
