--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -1,6 +1,5 @@
 :root {
   font-family: var(--de-custom_font, 'PingFang');
-  line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
   -webkit-font-smoothing: antialiased;
@@ -683,4 +682,9 @@ strong {
 
 .ed-month-table td {
   padding: 8px 0 !important;
+}
+
+.excel-header-cell,
+.header-cell {
+  background-color: #f5f6f7 !important;
 }
