fix: UI库样式优化

--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -688,3 +688,11 @@ strong {
 .header-cell {
   background-color: #f5f6f7 !important;
 }
+
+.logic-right {
+  .ed-select__selected-item {
+    .ed-tag {
+      max-width: 100px !important;
+    }
+  }
+}
