--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -239,6 +239,7 @@ body {
 
 .chart-type-style-dark {
   background: @side-content-background !important;
+  border: 1px solid #434343 !important;
 
   .ed-popper__arrow {
     display: none !important;
