fix(仪表板): 地图图表数据地区选择颜色有问题

--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -701,3 +701,9 @@ strong {
 .ed-upload-list__item .ed-icon--close-tip {
   display: none !important;
 }
+
+.is-dark.ed-select__popper.ed-tree-select__popper {
+  .ed-tree {
+    background-color: transparent;
+  }
+}
