Pr@dev v2@feat new adaptor (#16631)
* fix(数据大屏): 修复图层名称长度为交易问题

* feat(数据大屏): 增加大屏屏幕适配方式

--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -600,6 +600,14 @@ strong {
   overflow-y: auto;
 }
 
+.preview-content-inner-keep-proportion {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .preview-content-inner-height-first {
   width: auto;
   height: 100%;
